--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,6 +1,6 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=postgres
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root
+POSTGRES_DB=data
 POSTGRES_HOSTNAME=localhost
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=root
