--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -55,3 +55,6 @@ models:
   Node:
     model:
       - go-basic-gqlgen/pkg/entity/model.Node
+  TodoStatus:
+    model:
+      - go-basic-gqlgen/ent/todo.Status
